nextcloud/overlays/test/traefik/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.test.gewis.nl`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
    - match: Host(`nextcloud.test.gewis.nl`) && (PathPrefix(`/browser`) || PathPrefix(`/hosting/discovery`) || PathPrefix(`/hosting/capabilities`) || PathPrefix(`/cool`))
      kind: Rule
      services:
        - name: collabora
          port: 9980
